prevented search filters from getting cut off on phone screen

--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -101,4 +101,5 @@
 .search-single-filter-parent{
   white-space: nowrap;
   line-height: 2;
+  display: inline-block;
 }
